xcordef work in progress. Sxy(z)

--- a/2019xcor/xcordef.tex
+++ b/2019xcor/xcordef.tex
@@ -69,15 +69,15 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
 \begin{proposition}
 \label{prop:RxySzxy}
 %---------------------------------------
-\propbox{\begin{array}{FM >{\ds}rc l*{3}{@{\hspace{0pt}}l} c >{\ds}rc l*{2}{@{\hspace{0pt}}l}}
-    (1).&Papoulis:        & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy^\ast&(0&)] &\implies& \Szxy(z) &=&\FH^\ast&( &\omega)\Swxx\brp{?}
-  \\(2).&Kay:             & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy     &(m&)] &\implies& \Szxy(z) &=&\FH     &( &\omega)\Swxx\brp{?}
-  \\(3).&y-star-m:        & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy^\ast&(m&)] &\implies& \Szxy(z) &=&\FH^\ast&(-&\omega)\Swxx\brp{?}
-  \\(4).&x-star-m:        & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)\rvy     &(0&)] &\implies& \Szxy(z) &=&\FH     &(-&\omega)\Swxx\brp{?}
-  \\(5).&Bendat:          & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy     &(m&)] &\implies& \Szxy(z) &=&\FH     &( &\omega)\Swxx\brp{?}
-  \\(6).&alt-Bendat:      & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy     &(0&)] &\implies& \Szxy(z) &=&\FH     &(-&\omega)\Swxx\brp{?}
-  \\(7).&Bendat-star      & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy^\ast&(m&)] &\implies& \Szxy(z) &=&\FH^\ast&(-&\omega)\Swxx\brp{?}
-  \\(8).&alt-Bendat-star: & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)\rvy^\ast&(0&)] &\implies& \Szxy(z) &=&\FH     &(-&\omega)\Swxx\brp{?}
+\propbox{\begin{array}{FM   >{\ds}r  c     l *{3}{@{\hspace{0pt}}l}          c         >{\ds}r   c l @{\hspace{0pt}}c@{\hspace{0pt}}l    ll}
+    (1).&Papoulis:        & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy^\ast&(0&)] &\implies& \Szxy(z) &=&\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx^\ast\brp{\frac{1}{z^\ast}}
+  \\(2).&Kay:             & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy     &(m&)] &\implies& \Szxy(z) &=&\ZH     &(z)                    &\Szxx     (z)
+  \\(3).&y-star-m:        & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy^\ast&(m&)] &\implies& \Szxy(z) &=&\ZH^\ast&\brp{z^\ast}           &\Szxx^\ast\brp{z^\ast}
+  \\(4).&x-star-m:        & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)\rvy     &(0&)] &\implies& \Szxy(z) &=&\ZH     &\brp{\frac{1}{z}}      &\Szxx(z)
+  \\(5).&Bendat:          & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy     &(m&)] &\implies& \Szxy(z) &=&\ZH     &(z)                    &\Szxx(z)
+  \\(6).&alt-Bendat:      & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy     &(0&)] &\implies& \Szxy(z) &=&
+  \\(7).&Bendat-star      & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy^\ast&(m&)] &\implies& \Szxy(z) &=&
+  \\(8).&alt-Bendat-star: & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)\rvy^\ast&(0&)] &\implies& \Szxy(z) &=&
 \end{array}}
 \end{proposition}
 \begin{proof}
@@ -86,7 +86,7 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
     \Szxy(z)
       &\eqd \opZ\pE\Rxy(m)
       && \text{by definition of $\Szxy(\omega)$}
-      && \text{\xref{def:Swxy}}
+      && \text{\xref{def:Szxy}}
     \\&\eqd \opZ\pE\brs{\rvx(m)\rvy^\ast(0)}
       && \text{by Papoulis' definition of $\Rxy(m)$}
     \\&=    \opZ\pE\brs{\rvx(m)\brp{\sum_{k\in\Z} \fh(k)\rvx(0-k)}^\ast}
@@ -112,22 +112,12 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
       && \text{\xref{thm:conv}}
     \\&= \boxed{\ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx^\ast\brp{\frac{1}{z^\ast}}}
       && \text{by \prefp{thm:opZ}}
-    \\
-    \Swxy(\omega)
-      &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
-    \\&=    \brlr{\ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
-      &&    \text{by previous result}
-    \\&=    \ZH^\ast\brp{e^{i\omega}} \Szxx^\ast\brp{e^{i\omega}}
-    \\&=    \FH^\ast\brp{\omega} \Swxx^\ast\brp{\omega}
-    \\&=    \boxed{\FH^\ast\brp{\omega} \Swxx\brp{\omega}}
-      && \text{because $\Swxx(\omega)$ is \prope{real-valued}}
-      && \text{\xref{cor:Swxy_sym}}
 \\
 \intertext{2. If we follow Kay $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(0)\rvy(m)}}$, then\ldots}
     \Szxy(z)
       &\eqd \opZ\Rxy(m)
       && \text{by definition of $\Szxy(z)$}
-      && \text{\xref{def:Swxy}}
+      && \text{\xref{def:Szxy}}
     \\&\eqd \opZ\pE\brs{\rvy(m)\rvx^\ast(0)}
       && \text{by Kay's definition of $\Rxy(m)$}
     \\&=    \opZ\pE\brs{\brp{\fh(m)\convd\rvx(m)}\rvx^\ast(0)}
@@ -143,204 +133,161 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
       && \text{by definition of \ope{convolution}}
       && \text{\xref{def:convd}}
     \\&=    \brs{\opZ\fh(m)}\brs{\opZ\Rxx(m)}
-    \\&\eqd \ZH(z) \Szxx(z)
+    \\&\eqd \boxed{\ZH(z) \Szxx(z)}
       && \text{by definitions of $\ZH(z)$ and $\Szxx(z)$}
       %&& \text{\xref{def:dtft}}
-    \\
-    \Swxy(\omega)
-      &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
-    \\&=    \brlr{\ZH(z) \Szxx(z)}_{z=e^{i\omega}}
-      &&    \text{by previous result}
-    \\&=    \ZH\brp{e^{i\omega}} \Szxx\brp{e^{i\omega}}
-    \\&=    \boxed{\FH\brp{\omega} \Swxx\brp{\omega}}
 \\
 \intertext{3. For y-star-m $\brp{\Rxy(m)\eqd\pE\brs{\rvx(0)\rvy^\ast(m)}}$ \ldots}
-    \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
-      && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx(0)\rvy^\ast(m)}
-      && \text{by definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx(0)\brp{\sum_{k\in\Z} \FH(k)\rvx(m-k)}^\ast}
-      && \text{by \prope{LTI} property}
-    \\&=    \opDTFT\pE\brs{\rvx(0) \sum_{k\in\Z} \FH^\ast(k)      \rvx^\ast(m-k)}
-      && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
-      && \text{\xref{def:staralg}}
-    \\&=    \opDTFT        \sum_{k\in\Z} \FH^\ast(k) \pE\brs{\rvx(0)\rvx^\ast(m-k)}
-      && \text{by \prope{linearity} of $\opE$}
-      && \text{\xref{thm:pE_linop}}
-    \\&\eqd \opDTFT        \sum_{k\in\Z} \FH^\ast(k) \Rxx^\ast(m-k)
-      && \text{by definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh(m) \convd \Rxx^\ast(m)}
-      && \text{by definition of \ope{convolution}}
-      && \text{\xref{def:convd}}
-    \\&=    \brs{\opDTFT\fh^\ast(m)} \brs{\opDTFT\Rxx^\ast(m)}
-      && \text{by \thme{convolution theorem}}
-      && \text{\xref{thm:conv}}
-    \\&\eqd \FH(\omega) \Swxx(\omega)
-      && \text{by definition of \ope{DTFT}}
-      && \text{\xref{def:dtft}}
-    \\
-    \Swxy(z)
+    \Szxy(z)
       &\eqd \opZ\pE\Rxy(m)
-      && \text{by definition of $\Swxy(z)$}
-      && \text{\xref{def:Swxy}}
+      && \text{by definition of $\Szxy(z)$}
+      && \text{\xref{def:Szxy}}
     \\&\eqd \opZ\pE\brs{\rvx(0)\rvy^\ast(m)}
       && \text{by definition of $\Rxy(m)$}
-    \\&=    \opZ\pE\brs{\rvx(0)\brp{\sum_{k\in\Z} \ZH(k)\rvx(m-k)}^\ast}
+    \\&=    \opZ\pE\brs{\rvx(0)\brp{\sum_{k\in\Z} \fh(k)\rvx(m-k)}^\ast}
       && \text{by \prope{LTI} property}
-    \\&=    \opZ\pE\brs{\rvx(0) \sum_{k\in\Z} \ZH^\ast(k)      \rvx^\ast(m-k)}
+    \\&=    \opZ\pE\brs{\rvx(0) \sum_{k\in\Z} \fh^\ast(k)      \rvx^\ast(m-k)}
       && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
       && \text{\xref{def:staralg}}
-    \\&=    \opZ        \sum_{k\in\Z} \ZH^\ast(k) \pE\brs{\rvx(0)\rvx^\ast(m-k)}
+    \\&=    \opZ        \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx(0)\rvx^\ast(m-k)}
       && \text{by \prope{linearity} of $\opE$}
       && \text{\xref{thm:pE_linop}}
-    \\&\eqd \opZ        \sum_{k\in\Z} \ZH^\ast(k) \Rxx^\ast(m-k)
+    \\&\eqd \opZ        \sum_{k\in\Z} \fh^\ast(k) \Rxx^\ast(m-k)
       && \text{by definition of $\Rxy(m)$}
-    \\&\eqd \opZ\brs{\ZH^\ast(m) \convd \Rxx^\ast(m)}
+    \\&\eqd \opZ\brs{\fh^\ast(m) \convd \Rxx^\ast(m)}
       && \text{by definition of \ope{convolution}}
       && \text{\xref{def:convd}}
-    \\&=    \brs{\opZ\ZH^\ast(m)} \brs{\opZ\Rxx^\ast(m)}
+    \\&=    \brs{\opZ\fh^\ast(m)} \brs{\opZ\Rxx^\ast(m)}
       && \text{by \thme{convolution theorem}}
       && \text{\xref{thm:conv}}
-    \\&= \ZH^\ast\brp{z^\ast} \Swxx^\ast\brp{z^\ast}
+    \\&= \boxed{\ZH^\ast\brp{z^\ast} \Szxx^\ast\brp{z^\ast}}
       && \text{by property of the \ope{Z-transform}}
       && \text{by \xref{thm:opZ}}
     \\
-    \Swxy(\omega)
-      &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
-    \\&=    \brlr{\ZH^\ast\brp{z^\ast} \Swxx^\ast\brp{z^\ast}}_{z=e^{i\omega}}
-      &&    \text{by previous result}
-    \\&=    \ZH^\ast\brp{e^{-i\omega}} \Szxx^\ast\brp{e^{-i\omega}}
-    \\&=    \boxed{\FH^\ast\brp{-\omega} \Swxx^\ast\brp{-\omega}}
-      && \text{by definition of \ope{DTFT}}
-      && \text{\xref{def:dtft}}
-\\
-    \\
 \intertext{4. item For x-star-m $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(m)\rvy(0)}}$ \ldots}
-    \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
+    \Szxy(z)
+      &\eqd \opZ\pE\Rxy(m)
+      && \text{by definition of $\Szxy(z)$}
       && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx^\ast(m)\rvy(0)}
+    \\&\eqd \opZ\pE\brs{\rvx^\ast(m)\rvy(0)}
       && \text{by definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx^\ast(m)\sum_{k\in\Z} \FH(k)           \rvx(0-k)}
+    \\&=    \opZ\pE\brs{\rvx^\ast(m)\sum_{k\in\Z} \fh(k)           \rvx(0-k)}
       && \text{by \prope{LTI} property}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH(k)\pE\brs{\rvx^\ast(m)\rvx(0-k)}
+    \\&=    \opZ\sum_{k\in\Z} \fh(k)\pE\brs{\rvx^\ast(m)\rvx(0-k)}
       && \text{by \prope{linearity} of $\opE$}
       && \text{\xref{thm:pE_linop}}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH(k)\pE\brs{\rvx^\ast(m+k)\rvx(0)}
+    \\&=    \opZ\sum_{k\in\Z} \fh(k)\pE\brs{\rvx^\ast(m+k)\rvx(0)}
       && \text{by \prope{wide sense stationary} property}
       %&& \text{\xref{def:wss}}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH(k)\Rxx(m+k)
+    \\&=    \opZ\sum_{k\in\Z} \fh(k)\Rxx(m+k)
       && \text{by definition of $\Rxy(m)$}
-    \\&=    \opDTFT\sum_{k'\in\Z} \FH(-k')\Rxx(m-k')
+    \\&=    \opZ\sum_{k'\in\Z} \fh(-k')\Rxx(m-k')
       && \text{where $k'\eqd k$}
-    \\&\eqd \opDTFT\brs{\FH(-m) \convd \Rxx(m)}
+    \\&\eqd \opZ\brs{\fh(-m) \convd \Rxx(m)}
       && \text{by definition of \ope{convolution}}
       && \text{\xref{def:convd}}
-    \\&\eqd \brs{\opDTFT\FH(-m)} \brs{\opDTFT\Rxx(m)}
+    \\&\eqd \brs{\opZ\fh(-m)} \brs{\opZ\Rxx(m)}
       && \text{by \thme{convolution theorem}}
       && \text{\xref{thm:conv}}
-    \\&\eqd \FH(-\omega) \Swxx(\omega)
+    \\&\eqd \boxed{\ZH\brp{\frac{1}{z}} \Szxx(z)}
       && \text{by \prefp{thm:dtft_conjneg}}
 \\
 \intertext{5. If we follow Bendat $\brp{\Rxy(m)\eqd\pE\brs{\rvx(0)\rvy(m)}}$, then\ldots}
-    \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
+    \Szxy(z)
+      &\eqd \opZ\pE\Rxy(m)
+      && \text{by definition of $\Szxy(z)$}
       && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx(0)\rvy(m)}
+    \\&\eqd \opZ\pE\brs{\rvx(0)\rvy(m)}
       && \text{by Bendat's definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx(0)\brp{\sum_{k\in\Z} \FH(k) \rvx(m-k)}}
+    \\&=    \opZ\pE\brs{\rvx(0)\brp{\sum_{k\in\Z} \fh(k) \rvx(m-k)}}
       && \text{by \prope{LTI} property}
-    \\&=    \opDTFT                    \sum_{k\in\Z} \FH(k) \pE\brs{\rvx(0)\rvx(m-k)}
+    \\&=    \opZ                    \sum_{k\in\Z} \fh(k) \pE\brs{\rvx(0)\rvx(m-k)}
       && \text{by \prope{linearity} of $\opE$}
       && \text{\xref{thm:pE_linop}}
-    \\&\eqd \opDTFT                    \sum_{k\in\Z} \FH(k) \Rxx(m-k)
+    \\&\eqd \opZ                    \sum_{k\in\Z} \fh(k) \Rxx(m-k)
       && \text{by Bendat's definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh(m) \convd \Rxx(m)}
+    \\&\eqd \opZ\brs{\fh(m) \convd \Rxx(m)}
       && \text{by definition of \ope{convolution}}
       && \text{\xref{def:convd}}
-    \\&\eqd \FH(\omega) \Swxx(\omega)
+    \\&\eqd \ZH(z) \Szxx(z)
       && \text{by \thme{convolution theorem}}
       && \text{\xref{thm:conv}}
 \\
 \intertext{6. For alt-Bendat $\brp{\Rxy(m)\eqd\pE\brs{\rvx(m)\rvy(0)}}$ \ldots}
-    \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
+    \Szxy(z)
+      &\eqd \opZ\pE\Rxy(m)
+      && \text{by definition of $\Szxy(z)$}
       && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx(m)\rvy(0)}
+    \\&\eqd \opZ\pE\brs{\rvx(m)\rvy(0)}
       && \text{by this definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx(m)\brp{\sum_{k\in\Z} \FH(k) \rvx(0-k)}}
+    \\&=    \opZ\pE\brs{\rvx(m)\brp{\sum_{k\in\Z} \fh(k) \rvx(0-k)}}
       && \text{by \prope{LTI} property}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH(k) \pE\brs{\rvx(m)\rvx(-k)}
+    \\&=    \opZ\sum_{k\in\Z} \fh(k) \pE\brs{\rvx(m)\rvx(-k)}
       && \text{by \prope{linearity} of $\opE$}
       && \text{\xref{thm:pE_linop}}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH(k) \pE\brs{\rvx(0)\rvx(-m-k)}
+    \\&=    \opZ\sum_{k\in\Z} \fh(k) \pE\brs{\rvx(0)\rvx(-m-k)}
       && \text{by \prope{wide sense stationary} property}
       %&& \text{\xref{def:wss}}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH(k) \pE\brs{\rvx(-m-k)\rvx(0)}
+    \\&=    \opZ\sum_{k\in\Z} \fh(k) \pE\brs{\rvx(-m-k)\rvx(0)}
       && \text{by \prope{commutative} property}
-    \\&\eqd \opDTFT                    \sum_{k\in\Z} \FH(k) \Rxx(-m-k)
+    \\&\eqd \opZ                    \sum_{k\in\Z} \fh(k) \Rxx(-m-k)
       && \text{by this definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\FH(-m) \convd \Rxx(-m)}
+    \\&\eqd \opZ\brs{\fh(-m) \convd \Rxx(-m)}
       && \text{by definition of \ope{convolution}}
       && \text{\xref{def:convd}}
-    \\&\eqd \opDTFT\brs{\FH(-m) \convd \Rxx(m)}
+    \\&\eqd \opZ\brs{\fh(-m) \convd \Rxx(m)}
       && \text{by \prefp{cor:Rxxm}}
-    \\&\eqd \FH(-\omega) \Swxx(\omega)
+    \\&\eqd \FH(-\omega) \Szxx(z)
       && \text{by \thme{convolution theorem}}
       && \text{\xref{thm:conv}}
 \\
 \intertext{7. For Bendat-star $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}}$, then\ldots}
-    \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
+    \Szxy(z)
+      &\eqd \opZ\pE\Rxy(m)
+      && \text{by definition of $\Szxy(z)$}
       && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}
+    \\&\eqd \opZ\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}
       && \text{by Bendat-star definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}
-    \\&=    \opDTFT\pE\brs{\rvx^\ast(0)\brp{\sum_{k\in\Z} \FH(k) \rvx(m-k)}^\ast}
+    \\&=    \opZ\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}
+    \\&=    \opZ\pE\brs{\rvx^\ast(0)\brp{\sum_{k\in\Z} \fh(k) \rvx(m-k)}^\ast}
       && \text{by \prope{LTI} property}
-    \\&=    \opDTFT                    \sum_{k\in\Z} \FH^\ast(k) \pE\brs{\rvx^\ast(0)\rvx^\ast(m-k)}
+    \\&=    \opZ                    \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(0)\rvx^\ast(m-k)}
       && \text{by \prope{linearity} of $\opE$}
       && \text{\xref{thm:pE_linop}}
-    \\&\eqd \opDTFT                    \sum_{k\in\Z} \FH^\ast(k) \Rxx(m-k)
+    \\&\eqd \opZ                    \sum_{k\in\Z} \fh^\ast(k) \Rxx(m-k)
       && \text{by Bendat-star definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh^\ast(m) \convd \Rxx(m)}
+    \\&\eqd \opZ\brs{\fh^\ast(m) \convd \Rxx(m)}
       && \text{by definition of \ope{convolution}}
       && \text{\xref{def:convd}}
-    \\&\eqd \FH^\ast(-\omega) \Swxx(\omega)
+    \\&\eqd \FH^\ast(-\omega) \Szxx(z)
       && \text{by \thme{convolution theorem}}
       && \text{\xref{thm:conv}}
 \\
 \intertext{8. For alt-Bendat-star $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(m)\rvy^\ast(0)}}$ \ldots}
-    \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
+    \Szxy(z)
+      &\eqd \opZ\pE\Rxy(m)
+      && \text{by definition of $\Szxy(z)$}
       && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx^\ast(m)\rvy^\ast(0)}
+    \\&\eqd \opZ\pE\brs{\rvx^\ast(m)\rvy^\ast(0)}
       && \text{by this definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx^\ast(m)\brp{\sum_{k\in\Z} \FH^\ast(k) \rvx^\ast(0-k)}}
+    \\&=    \opZ\pE\brs{\rvx^\ast(m)\brp{\sum_{k\in\Z} \fh^\ast(k) \rvx^\ast(0-k)}}
       && \text{by \prope{LTI} property}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH^\ast(k) \pE\brs{\rvx^\ast(m)\rvx^\ast(-k)}
+    \\&=    \opZ\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(m)\rvx^\ast(-k)}
       && \text{by \prope{linearity} of $\opE$}
       && \text{\xref{thm:pE_linop}}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH^\ast(k) \pE\brs{\rvx^\ast(0)\rvx^\ast(-m-k)}
+    \\&=    \opZ\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(0)\rvx^\ast(-m-k)}
       && \text{by \prope{wide sense stationary} property}
       %&& \text{\xref{def:wss}}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH^\ast(k) \pE\brs{\rvx^\ast(-m-k)\rvx^\ast(0)}
+    \\&=    \opZ\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(-m-k)\rvx^\ast(0)}
       && \text{by \prope{commutative} property}
-    \\&\eqd \opDTFT                    \sum_{k\in\Z} \FH^\ast(k) \Rxx^\ast(-m-k)
+    \\&\eqd \opZ                    \sum_{k\in\Z} \fh^\ast(k) \Rxx^\ast(-m-k)
       && \text{by this definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\FH(-m) \convd \Rxx^\ast(-m)}
+    \\&\eqd \opZ\brs{\fh(-m) \convd \Rxx^\ast(-m)}
       && \text{by definition of \ope{convolution}}
       && \text{\xref{def:convd}}
-    \\&\eqd \opDTFT\brs{\FH(-m) \convd \Rxx(m)}
+    \\&\eqd \opZ\brs{\fh(-m) \convd \Rxx(m)}
       && \text{by \prefp{cor:Rxxm}}
-    \\&\eqd \FH(-\omega) \Swxx(\omega)
+    \\&\eqd \FH(-\omega) \Szxx(z)
       && \text{by \thme{convolution theorem}}
       && \text{\xref{thm:conv}}
   \end{align*}
@@ -368,7 +315,8 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
     \Swxy(\omega)
       &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
     \\&=    \brlr{\ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
-      &&    \text{by previous result}
+      &&    \text{by $\Szxy(z)$ result}
+      &&    \text{\xref{prop:RxySzxy}}
     \\&=    \ZH^\ast\brp{e^{i\omega}} \Szxx^\ast\brp{e^{i\omega}}
     \\&=    \FH^\ast\brp{\omega} \Swxx^\ast\brp{\omega}
     \\&=    \boxed{\FH^\ast\brp{\omega} \Swxx\brp{\omega}}
@@ -379,121 +327,43 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
     \Swxy(\omega)
       &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
     \\&=    \brlr{\ZH(z) \Szxx(z)}_{z=e^{i\omega}}
-      &&    \text{by previous result}
+      &&    \text{by $\Szxy(z)$ result}
+      &&    \text{\xref{prop:RxySzxy}}
     \\&=    \ZH\brp{e^{i\omega}} \Szxx\brp{e^{i\omega}}
     \\&=    \boxed{\FH\brp{\omega} \Swxx\brp{\omega}}
 \\
 \intertext{3. For y-star-m $\brp{\Rxy(m)\eqd\pE\brs{\rvx(0)\rvy^\ast(m)}}$ \ldots}
     \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
-      && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx(0)\rvy^\ast(m)}
-      && \text{by definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx(0)\brp{\sum_{k\in\Z} \FH(k)\rvx(m-k)}^\ast}
-      && \text{by \prope{LTI} property}
-    \\&=    \opDTFT\pE\brs{\rvx(0) \sum_{k\in\Z} \FH^\ast(k)      \rvx^\ast(m-k)}
-      && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
-      && \text{\xref{def:staralg}}
-    \\&=    \opDTFT        \sum_{k\in\Z} \FH^\ast(k) \pE\brs{\rvx(0)\rvx^\ast(m-k)}
-      && \text{by \prope{linearity} of $\opE$}
-      && \text{\xref{thm:pE_linop}}
-    \\&\eqd \opDTFT        \sum_{k\in\Z} \FH^\ast(k) \Rxx^\ast(m-k)
-      && \text{by definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh(m) \convd \Rxx^\ast(m)}
-      && \text{by definition of \ope{convolution}}
-      && \text{\xref{def:convd}}
-    \\&=    \brs{\opDTFT\fh^\ast(m)} \brs{\opDTFT\Rxx^\ast(m)}
-      && \text{by \thme{convolution theorem}}
-      && \text{\xref{thm:conv}}
-    \\&\eqd \FH(\omega) \Swxx(\omega)
-      && \text{by definition of \ope{DTFT}}
-      && \text{\xref{def:dtft}}
-    \\
-    \Swxy(z)
-      &\eqd \opZ\pE\Rxy(m)
-      && \text{by definition of $\Swxy(z)$}
-      && \text{\xref{def:Swxy}}
-    \\&\eqd \opZ\pE\brs{\rvx(0)\rvy^\ast(m)}
-      && \text{by definition of $\Rxy(m)$}
-    \\&=    \opZ\pE\brs{\rvx(0)\brp{\sum_{k\in\Z} \ZH(k)\rvx(m-k)}^\ast}
-      && \text{by \prope{LTI} property}
-    \\&=    \opZ\pE\brs{\rvx(0) \sum_{k\in\Z} \ZH^\ast(k)      \rvx^\ast(m-k)}
-      && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
-      && \text{\xref{def:staralg}}
-    \\&=    \opZ        \sum_{k\in\Z} \ZH^\ast(k) \pE\brs{\rvx(0)\rvx^\ast(m-k)}
-      && \text{by \prope{linearity} of $\opE$}
-      && \text{\xref{thm:pE_linop}}
-    \\&\eqd \opZ        \sum_{k\in\Z} \ZH^\ast(k) \Rxx^\ast(m-k)
-      && \text{by definition of $\Rxy(m)$}
-    \\&\eqd \opZ\brs{\ZH^\ast(m) \convd \Rxx^\ast(m)}
-      && \text{by definition of \ope{convolution}}
-      && \text{\xref{def:convd}}
-    \\&=    \brs{\opZ\ZH^\ast(m)} \brs{\opZ\Rxx^\ast(m)}
-      && \text{by \thme{convolution theorem}}
-      && \text{\xref{thm:conv}}
-    \\&= \ZH^\ast\brp{z^\ast} \Swxx^\ast\brp{z^\ast}
-      && \text{by property of the \ope{Z-transform}}
-      && \text{by \xref{thm:opZ}}
-    \\
-    \Swxy(\omega)
       &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
     \\&=    \brlr{\ZH^\ast\brp{z^\ast} \Swxx^\ast\brp{z^\ast}}_{z=e^{i\omega}}
-      &&    \text{by previous result}
+      &&    \text{by $\Szxy(z)$ result}
+      &&    \text{\xref{prop:RxySzxy}}
     \\&=    \ZH^\ast\brp{e^{-i\omega}} \Szxx^\ast\brp{e^{-i\omega}}
-    \\&=    \boxed{\FH^\ast\brp{-\omega} \Swxx^\ast\brp{-\omega}}
+    \\&\eqd \boxed{\FH^\ast\brp{-\omega} \Swxx^\ast\brp{-\omega}}
       && \text{by definition of \ope{DTFT}}
       && \text{\xref{def:dtft}}
 \\
-    \\
 \intertext{4. item For x-star-m $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(m)\rvy(0)}}$ \ldots}
     \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
-      && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx^\ast(m)\rvy(0)}
-      && \text{by definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx^\ast(m)\sum_{k\in\Z} \FH(k)           \rvx(0-k)}
-      && \text{by \prope{LTI} property}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH(k)\pE\brs{\rvx^\ast(m)\rvx(0-k)}
-      && \text{by \prope{linearity} of $\opE$}
-      && \text{\xref{thm:pE_linop}}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH(k)\pE\brs{\rvx^\ast(m+k)\rvx(0)}
-      && \text{by \prope{wide sense stationary} property}
-      %&& \text{\xref{def:wss}}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH(k)\Rxx(m+k)
-      && \text{by definition of $\Rxy(m)$}
-    \\&=    \opDTFT\sum_{k'\in\Z} \FH(-k')\Rxx(m-k')
-      && \text{where $k'\eqd k$}
-    \\&\eqd \opDTFT\brs{\FH(-m) \convd \Rxx(m)}
-      && \text{by definition of \ope{convolution}}
-      && \text{\xref{def:convd}}
-    \\&\eqd \brs{\opDTFT\FH(-m)} \brs{\opDTFT\Rxx(m)}
-      && \text{by \thme{convolution theorem}}
-      && \text{\xref{thm:conv}}
-    \\&\eqd \FH(-\omega) \Swxx(\omega)
-      && \text{by \prefp{thm:dtft_conjneg}}
+      &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
+    \\&=    \brlr{\ZH\brp{\frac{1}{z}} \Szxx(z)}_{z=e^{i\omega}}
+      &&    \text{by $\Szxy(z)$ result}
+      &&    \text{\xref{prop:RxySzxy}}
+    \\&=    \ZH\brp{e^{-i\omega}} \Szxx\brp{e^{i\omega}}
+    \\&\eqd \boxed{\FH(-\omega) \Swxx\brp(\omega)}
+      && \text{by definition of \ope{DTFT}}
+      && \text{\xref{def:dtft}}
 \\
 \intertext{5. If we follow Bendat $\brp{\Rxy(m)\eqd\pE\brs{\rvx(0)\rvy(m)}}$, then\ldots}
     \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
-      && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx(0)\rvy(m)}
-      && \text{by Bendat's definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx(0)\brp{\sum_{k\in\Z} \FH(k) \rvx(m-k)}}
-      && \text{by \prope{LTI} property}
-    \\&=    \opDTFT                    \sum_{k\in\Z} \FH(k) \pE\brs{\rvx(0)\rvx(m-k)}
-      && \text{by \prope{linearity} of $\opE$}
-      && \text{\xref{thm:pE_linop}}
-    \\&\eqd \opDTFT                    \sum_{k\in\Z} \FH(k) \Rxx(m-k)
-      && \text{by Bendat's definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh(m) \convd \Rxx(m)}
-      && \text{by definition of \ope{convolution}}
-      && \text{\xref{def:convd}}
-    \\&\eqd \FH(\omega) \Swxx(\omega)
-      && \text{by \thme{convolution theorem}}
-      && \text{\xref{thm:conv}}
+      &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
+    \\&=    \brlr{\ZH(z) \Szxx(z)}_{z=e^{i\omega}}
+      &&    \text{by $\Szxy(z)$ result}
+      &&    \text{\xref{prop:RxySzxy}}
+    \\&=    \ZH\brp{e^{i\omega}} \Szxx\brp{e^{i\omega}}
+    \\&\eqd \boxed{\FH(\omega) \Swxx\brp(\omega)}
+      && \text{by definition of \ope{DTFT}}
+      && \text{\xref{def:dtft}}
 \\
 \intertext{6. For alt-Bendat $\brp{\Rxy(m)\eqd\pE\brs{\rvx(m)\rvy(0)}}$ \ldots}
     \Swxy(\omega)
@@ -502,22 +372,22 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
       && \text{\xref{def:Swxy}}
     \\&\eqd \opDTFT\pE\brs{\rvx(m)\rvy(0)}
       && \text{by this definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx(m)\brp{\sum_{k\in\Z} \FH(k) \rvx(0-k)}}
+    \\&=    \opDTFT\pE\brs{\rvx(m)\brp{\sum_{k\in\Z} \fh(k) \rvx(0-k)}}
       && \text{by \prope{LTI} property}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH(k) \pE\brs{\rvx(m)\rvx(-k)}
+    \\&=    \opDTFT\sum_{k\in\Z} \fh(k) \pE\brs{\rvx(m)\rvx(-k)}
       && \text{by \prope{linearity} of $\opE$}
       && \text{\xref{thm:pE_linop}}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH(k) \pE\brs{\rvx(0)\rvx(-m-k)}
+    \\&=    \opDTFT\sum_{k\in\Z} \fh(k) \pE\brs{\rvx(0)\rvx(-m-k)}
       && \text{by \prope{wide sense stationary} property}
       %&& \text{\xref{def:wss}}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH(k) \pE\brs{\rvx(-m-k)\rvx(0)}
+    \\&=    \opDTFT\sum_{k\in\Z} \fh(k) \pE\brs{\rvx(-m-k)\rvx(0)}
       && \text{by \prope{commutative} property}
-    \\&\eqd \opDTFT                    \sum_{k\in\Z} \FH(k) \Rxx(-m-k)
+    \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh(k) \Rxx(-m-k)
       && \text{by this definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\FH(-m) \convd \Rxx(-m)}
+    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx(-m)}
       && \text{by definition of \ope{convolution}}
       && \text{\xref{def:convd}}
-    \\&\eqd \opDTFT\brs{\FH(-m) \convd \Rxx(m)}
+    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx(m)}
       && \text{by \prefp{cor:Rxxm}}
     \\&\eqd \FH(-\omega) \Swxx(\omega)
       && \text{by \thme{convolution theorem}}
@@ -531,12 +401,12 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
     \\&\eqd \opDTFT\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}
       && \text{by Bendat-star definition of $\Rxy(m)$}
     \\&=    \opDTFT\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}
-    \\&=    \opDTFT\pE\brs{\rvx^\ast(0)\brp{\sum_{k\in\Z} \FH(k) \rvx(m-k)}^\ast}
+    \\&=    \opDTFT\pE\brs{\rvx^\ast(0)\brp{\sum_{k\in\Z} \fh(k) \rvx(m-k)}^\ast}
       && \text{by \prope{LTI} property}
-    \\&=    \opDTFT                    \sum_{k\in\Z} \FH^\ast(k) \pE\brs{\rvx^\ast(0)\rvx^\ast(m-k)}
+    \\&=    \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(0)\rvx^\ast(m-k)}
       && \text{by \prope{linearity} of $\opE$}
       && \text{\xref{thm:pE_linop}}
-    \\&\eqd \opDTFT                    \sum_{k\in\Z} \FH^\ast(k) \Rxx(m-k)
+    \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \Rxx(m-k)
       && \text{by Bendat-star definition of $\Rxy(m)$}
     \\&\eqd \opDTFT\brs{\fh^\ast(m) \convd \Rxx(m)}
       && \text{by definition of \ope{convolution}}
@@ -552,22 +422,22 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
       && \text{\xref{def:Swxy}}
     \\&\eqd \opDTFT\pE\brs{\rvx^\ast(m)\rvy^\ast(0)}
       && \text{by this definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx^\ast(m)\brp{\sum_{k\in\Z} \FH^\ast(k) \rvx^\ast(0-k)}}
+    \\&=    \opDTFT\pE\brs{\rvx^\ast(m)\brp{\sum_{k\in\Z} \fh^\ast(k) \rvx^\ast(0-k)}}
       && \text{by \prope{LTI} property}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH^\ast(k) \pE\brs{\rvx^\ast(m)\rvx^\ast(-k)}
+    \\&=    \opDTFT\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(m)\rvx^\ast(-k)}
       && \text{by \prope{linearity} of $\opE$}
       && \text{\xref{thm:pE_linop}}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH^\ast(k) \pE\brs{\rvx^\ast(0)\rvx^\ast(-m-k)}
+    \\&=    \opDTFT\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(0)\rvx^\ast(-m-k)}
       && \text{by \prope{wide sense stationary} property}
       %&& \text{\xref{def:wss}}
-    \\&=    \opDTFT\sum_{k\in\Z} \FH^\ast(k) \pE\brs{\rvx^\ast(-m-k)\rvx^\ast(0)}
+    \\&=    \opDTFT\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(-m-k)\rvx^\ast(0)}
       && \text{by \prope{commutative} property}
-    \\&\eqd \opDTFT                    \sum_{k\in\Z} \FH^\ast(k) \Rxx^\ast(-m-k)
+    \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \Rxx^\ast(-m-k)
       && \text{by this definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\FH(-m) \convd \Rxx^\ast(-m)}
+    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx^\ast(-m)}
       && \text{by definition of \ope{convolution}}
       && \text{\xref{def:convd}}
-    \\&\eqd \opDTFT\brs{\FH(-m) \convd \Rxx(m)}
+    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx(m)}
       && \text{by \prefp{cor:Rxxm}}
     \\&\eqd \FH(-\omega) \Swxx(\omega)
       && \text{by \thme{convolution theorem}}
